# rsunimrcp_tts

./: Cargo.toml  Dockerfile  README.md  unimrcpserver.xml
src/: lib.rs  synthesizer.rs
